--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -23,34 +23,34 @@ background_opacity 0.7
 
 # black
 color0 #1d1d1b
-color8 #3d3d3b
+color8 #5f5f58
 
 # red
-color1 #b32a23
-color9 #cf554e
+color1 #a70e0e
+color9 #f24949
 
 # green
-color2 #23b334
-color10 #7ee88d
+color2 #00ff66
+color10 #76ffae
 
 # yellow
-color3 #cfda29
-color11 #eaf76c
+color3 #e5d605
+color11 #fff666
 
 # blue
-color4 #298cda
-color12 #6cccf7
+color4 #2465e4
+color12 #4c86f8
 
 # magenta
 color5 #aa00ff
-color13 #ca6ff8
+color13 #bf58f3
 
 # cyan
 color6 #00b899
-color14 #9df7d9
+color14 #49eec2
 
 # white
-color7 #fefefe
+color7 #dbdbdf
 color15 #f5f5f6
 
 #################################
@@ -134,7 +134,7 @@ shell fish
 #################################
 
 tab_bar_edge top
-tab_bar_margin_width 5
+tab_bar_margin_width 0
 tab_bar_margin_height 0 5
 tab_bar_align left
 tab_bar_style powerline
