Edited kitty.conf file, PS: NEEDED TO WORK ON CLIPBOARD KEYBINDS

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,110 +1,79 @@
-#################################################################
-#      _    _ _   _                            __ _       	#
-#     | |  (_) | | |                          / _(_)      	#
-#     | | ___| |_| |_ _   _    ___ ___  _ __ | |_ _  __ _ 	#
-#     | |/ / | __| __| | | |  / __/ _ \| '_ \|  _| |/ _` |	#
-#     |   <| | |_| |_| |_| | | (_| (_) | | | | | | | (_| |	#
-#     |_|\_\_|\__|\__|\__, |  \___\___/|_| |_|_| |_|\__, |	#
-#                      __/ |                         __/ |	#
-#                     |___/                         |___/ 	#
-#################################################################
+#
+# Kitty config file
+#
 
-#################################
-#             _            	#
-#      __ ___| |___ _ _ ___	#
-#     / _/ _ \ / _ \ '_(_-<	#
-#     \__\___/_\___/_| /__/	#
-#                          	#
-#################################
+#
+# COLORS
+#
 
-background #1d1d1b
-foreground #f6f6f5
+background #1D1D1B
 background_opacity 0.7
+foreground #F6F6F5
 
-# black
-color0 #1d1d1b
-color8 #5f5f58
+# Black
+color0 #1D1D1B
+color8 #5F5F58
 
-# red
-color1 #a70e0e
-color9 #f24949
+# Red
+color1 #A70E0E
+color9 #F24949
 
-# green
-color2 #00ff66
-color10 #76ffae
+# Green
+color2 #00FF66
+color10 #76FFAE
 
-# yellow
-color3 #e5d605
-color11 #fff666
+# Yellow
+color3 #E5D605
+color11 #FFF666
 
-# blue
-color4 #2465e4
-color12 #4c86f8
+# Blue
+color4 #2465E4
+color12 #4C86F8
 
-# magenta
-color5 #aa00ff
-color13 #bf58f3
+# Magenta
+color5 #AA00FF
+color13 #BF58F3
 
-# cyan
-color6 #00b899
-color14 #49eec2
+# Cyan
+color6 #00B899
+color14 #49EEC2
 
-# white
-color7 #dbdbdf
-color15 #f5f5f6
+# White
+color7 #DBDBDF
+color15 #F6F6F5
 
-#################################
-#       __         _   		#
-#      / _|___ _ _| |_ 		#
-#     |  _/ _ \ ' \  _|		#
-#     |_| \___/_||_\__|		#
-#                      		#
-#################################
+# 
+# FONT
+#
 
 font_family MononokiNerdFont
 
-#########################################
-#                              		#
-#      __ _  _ _ _ ___ ___ _ _ 		#
-#     / _| || | '_(_-</ _ \ '_|		#
-#     \__|\_,_|_| /__/\___/_|  		#
-#                              		#
-#########################################
+#
+# CURSOR
+#
 
-cursor_text_color #f6f6f5
+cursor_text_color #F6F6F5
 cursor_shape beam
 cursor_shape_unfocused unchanged
 cursor_blink_interval 0.5 ease-in-out
 cursor_trail 1
 
-#################################################
-#         _            _           _      	#
-#      __| |_  ___ _ _| |_ __ _  _| |_ ___	#
-#     (_-< ' \/ _ \ '_|  _/ _| || |  _(_-<	#
-#     /__/_||_\___/_|  \__\__|\_,_|\__/__/	#
-#                                         	#
-#################################################
+#
+# KEYBINDS
+#
 
-#################
-# Copy & Paste	#
-#################
+# Copy & Paste
+# REMAKE THIS KEYBIND
+# map cmd+c copy_or_noop
+# map cmd+v paste_from_clipboard
 
-map cmd+c copy_or_noop
-map cmd+v paste_from_clipboard
-
-#################
-# Scrolling	#
-#################
-
-map cmd+up scroll_line_up
-map cmd+down scroll_line_down
+# Scrolling
+map shift+up scroll_line_up
+map shift+down scroll_line_down
 map ctrl+up scroll_page_up
 map ctrl+down scroll_page_down
 
-#########
-# Tabs	#
-#########
-
+# Tabs
 map ctrl+t new_tab
 map ctrl+tab next_tab
 map ctrl+shift+tab previous_tab
@@ -115,21 +84,17 @@ map ctrl+2 goto_tab 2
 map ctrl+3 goto_tab 3
 map ctrl+4 goto_tab 4
 
-#################################
-#      _        _       	#
-#     | |_ __ _| |__ ___	#
-#     |  _/ _` | '_ (_-<	#
-#      \__\__,_|_.__/__/	#
-#                       	#
-#################################
+#
+# TABS VISUALS
+#
 
 tab_bar_edge top
 tab_bar_margin_width 0
 tab_bar_margin_height 0 5
 tab_bar_align left
 tab_bar_style powerline
-active_tab_foreground #1d1d1b
-active_tab_background #aa00ff
+active_tab_foreground #1D1D1B
+active_tab_background #AA00FF
 active_tab_font_style bold
-inactive_tab_background #1d1d1b
-inactive_tab_foreground #f6f6f5
+inactive_tab_background #1D1D1B
+inactive_tab_foreground #F6F6F5
