Modified style of windows, added plugin broders-plus-plus and extra border

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -40,15 +40,24 @@ exec-once = waybar & hyprpaper
 #
 # LOOKS
 #
+plugin {
+	borders-plus-plus {
+		add_borders = 1
+
+		col.border_1 = rgb(1D1D1B)
+		
+		border_size_1 = 6
+	}
+}
 
 general {
-	gaps_in = 5
-	gaps_out = 20
+	gaps_in = 8
+	gaps_out = 10
 
-	border_size = 4
+	border_size = 3
 	
-	col.active_border = $colormain
-	col.inactive_border = $colorfg
+	col.active_border = rgb(AA00FF) rgb(BF58F3) 45deg
+	col.inactive_border = rgb(1D1D1B)
 	
 	resize_on_border = false
 
@@ -59,17 +68,14 @@ general {
 }
 
 decoration {
-	rounding = 10
-	rounding_power = 4
-
-	active_opacity = 1.0
-	inactive_opacity = 0.8
+	active_opacity = 1
+	inactive_opacity = 1
 
 	shadow {
-		enabled = true
-		range = 4
-		render_power = 3
-		color = rgba(F6F6F5EE)
+		enabled = true 
+		range = 8
+		render_power = 2
+		color = rgba(1D1D1B77)
 	}
 
 	blur {
@@ -98,9 +104,9 @@ animations {
     # Default animations, see https://wiki.hypr.land/Configuring/Animations/
     #           NAME,          ONOFF, SPEED, CURVE,        [STYLE]
     animation = global,        1,     10,    default
-    animation = border,        1,     5.39,  easeOutQuint
-    animation = windows,       1,     4.79,  easeOutQuint
-    animation = windowsIn,     1,     4.1,   easeOutQuint, popin 87%
+    animation = border,        1,     2.39,  easeOutQuint
+    animation = windows,       1,     3,	 easeOutQuint
+    animation = windowsIn,     1,     2.1,   easeOutQuint, popin 87%
     animation = windowsOut,    1,     1.49,  linear,       popin 87%
     animation = fadeIn,        1,     1.73,  almostLinear
     animation = fadeOut,       1,     1.46,  almostLinear
@@ -173,6 +179,10 @@ bind = $mainMod, 9, workspace, 9
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
+bind = $mainMod SHIFT, 4, movetoworkspace, 4
+
+bind = $mainMod SHIFT, S, movetoworkspace, special
+bind = $mainMod, S, togglespecialworkspace, special
 
 #
 # WINDOWRULES (DEFAULTS)
