--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,41 +1,49 @@
 "$schema" = 'https://starship.rs/config-schema.json'
 
+add_newline = true
+
 format = """
+[ ](bg:#1D1D1C)\
+[ ](bg:#411654)\
+[ ](bg:#640F8D)\
+[ ](bg:#8708C6)\
 $os\
 $username\
-[](bg:#00B899 fg:#AA00FF)\
+[](bg:#00B899 fg:#AA00FF)\
 $directory\
-[](fg:#00B899 bg:#E5D605)\
+[](bg:#E5D605 fg:#00B899)\
 $git_branch\
 $git_status\
-[](fg:#E5D605)\
+[ ](fg:#E5D605 bg:#1D1D1B)\
+\n$character
 """
 
 # Disable the blank line at the start of the prompt
 # add_newline = false
-
+[character]
+format = " > "
 # You can also replace your username with a neat symbol like   or disable this
 # and use the os module below
 [username]
 show_always = true
-style_user = "bg:#AA00FF"
-style_root = "bg:#AA00FF"
+style_user = "bg:#AA00FF fg:#F6F6F5"
+style_root = ""
 format = '[ $user ]($style)'
 disabled = false
 
 # An alternative to the username module which displays a symbol that
 # represents the current operating system
 [os]
-style = "bg:#AA00FF"
+style = "bg:#AA00FF fg:#F6F6F5"
 disabled = false # Disabled by default
 
 [os.symbols]
 Arch = " 󰣇 "
 
 [directory]
-style = "bg:#00B899 fg:#F6F6F5"
+style = "bg:#00B899 fg:#1D1D1B"
 format = "[ $path ]($style)"
-truncation_length = 3
+truncation_length = 6
 truncation_symbol = "…/"
 
 # Here is how you can shorten some long paths by text replacement
