Added hyprpm reload to autostart

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -35,7 +35,7 @@ $browser = com.opera.Opera
 exec-once = eval ssh-agent $SHELL
 exec-once = ssh-add .ssh/id_ed25519
 
-exec-once = waybar & hyprpaper
+exec-once = waybar & hyprpaper & hyprpm reload
 
 #
 # LOOKS
